<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.WorkerInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/avatarView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:layout_marginStart="150dp"
                android:layout_marginEnd="150dp"
                android:contentDescription="@string/avatar"
                android:src="@mipmap/ic_launcher"
                android:visibility="invisible"/>

            <ProgressBar
                android:id="@+id/avatarLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:visibility="visible" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="35dp"
            android:paddingTop="5dp"
            android:paddingRight="35dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/infoFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/first_name_info"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="35dp"
            android:paddingTop="5dp"
            android:paddingRight="35dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/infoLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/last_name_info"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="35dp"
            android:paddingTop="5dp"
            android:paddingRight="35dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/infoAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/age_info"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="35dp"
            android:paddingTop="5dp"
            android:paddingRight="35dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/infoBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/birthday_info"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal"
            android:paddingLeft="35dp"
            android:paddingTop="5dp"
            android:paddingRight="35dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/infoSpecialties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/specialties_info"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/listSpecialties"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>